fix: исправлена логика обработки передачи пустого наименования задачи в hendlers обновления и создания задачи. Доработан отлов ошибок в handlers
